@@ -1,3 +1,10 @@
+2014-05-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/include/hterror.H1, src/hyper/hterror.c,
+	src/sman/sman.c, src/graph/view3D/stuff3d.c,
+	src/clef/edible.c, contrib/emacs/Makefile.in:
+	Silence some warnings.
+
 2014-05-01  Raoul Bourquin <raoulb@bluewin.ch>
 
 	* src/algebra/array2.spad.pamphlet,
